--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-# Byte-compiled / optimized / DLL files
+# Temporary files
+*~
+
+#
+*.png
+
+#Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
